# Pointnet-PyTorch-Jupyter

./: .gitignore  LICENSE  README.md  environment.yml  infer_partseg.py  readme_classification.ipynb  readme_examples.ipynb  readme_partseg.ipynb  readme_semseg.ipynb  requirements.txt  test_classification.py  test_partseg.py  test_semseg.py  train_classification.py  train_partseg.py  train_partseg_ddp.py  train_semseg.py
data_utils/: S3DISDataLoader.py  ShapeNetDataLoader.py  collect_indoor3d_data.py  indoor3d_util.py
experiments/: exp_utils.py  rot_shr_flip_dichot.ipynb  rot_shr_flip_dichot.py  template.ipynb
log/sem_seg/pointnet2_sem_seg/logs/: pointnet2_sem_seg.txt
models/: pointnet2_part_seg_msg.py  pointnet2_utils.py
visualizer/: CMakeLists.txt  pc_utils.py  show3d_balls.py
